# swissre

./: .gitignore  DATABRICKS_GUIDE.md  PySpark_ETL_Hash_Fetching.ipynb  PySpark_ETL_Local.ipynb  PySpark_Windows_Fix.ipynb  README.md  main.py  pandas_etl.py  pyproject.toml  requirements.txt
config/: spark-defaults.conf
data/: claims_data.csv  policyholder_data.csv
src/: etl_job.py  utils.py
tests/: conftest.py  test_etl_job.py  test_utils.py
tests/data/: dummy_claims.csv  dummy_policy.csv
