[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-processing"
version = "1.0.0"
description = "ETL pipeline for insurance claims processing using PySpark"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "pyspark==3.5.1",
    "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
